--- a/1/about.html
+++ b/1/about.html
@@ -49,7 +49,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,800,900&amp;subset=cyrillic" rel="stylesheet">
 		<link rel="stylesheet" href="libs/bootstrap.css">
 
-		<link rel="stylesheet" href="css/style.css?v=1.0.4">
+		<link rel="stylesheet" href="css/style.css?v=1.0.5">
 	</head>
 
 	<body>
@@ -345,17 +345,17 @@
 
 
 
-		<!-- feedback -->
-		<div class="feedback">
+		<!-- feedback-about -->
+		<div class="feedback-about">
 			<div class="container">
-				<div class="feedback__left wow slideInLeft" data-wow-duration="1.4s">
+				<div class="feedback-about__left wow slideInLeft" data-wow-duration="1.4s">
 					<p>Register company: <span>№626 868 120</span></p>
 					<p>Phone number: <span>support@icurrent.global</span></p>
 					<p>E-mail: <span>mailcom@gmail.com</span></p>
 					<p>Adress: <span> 10 Foster Ln, London, EC2V 6HH, United Kingdom</span></p>
 				</div>
 
-				<div class="feedback__right wow slideInRight" data-wow-duration="1.4s">
+				<div class="feedback-about__right wow slideInRight" data-wow-duration="1.4s">
 					<form action="smart.php" method="POST">
 						<div class="feedback__inputs">
 							<input type="text" name="name" placeholder="Name" required="">
