--- a/1/index.html
+++ b/1/index.html
@@ -48,8 +48,9 @@
 		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,800,900&amp;subset=cyrillic" rel="stylesheet">
 		<link rel="stylesheet" href="libs/bootstrap.css">
+		<link rel="stylesheet" href="libs/font-awesome.css">
 
-		<link rel="stylesheet" href="css/style.css?v=1.0.4">
+		<link rel="stylesheet" href="css/style.css?v=1.0.5">
 	</head>
 
 	<body>
@@ -126,16 +127,108 @@
 
 			<!-- exchange -->
 			<div class="exchange">
-				<!-- <div class="container"> -->
-					<span>BTC ▲ 9999,45</span>
-					<span>ETH ▼ 9999,45</span>
-					<span>BTC ▲ 9999,45</span>
-					<span>ETH ▼ 9999,45</span>
-					<span>BTC ▲ 9999,45</span>
-					<span>ETH ▼ 9999,45</span>
-					<span>BTC ▲ 9999,45</span>
-					<span>ETH ▼ 9999,45</span>
-				<!-- </div> -->
+				<div class="marquee" style="overflow: hidden">
+					<span>
+						BTC
+						<i class="fa fa-caret-up" style="color: #0f0; font-size: 24px;" aria-hidden="true"></i>
+ 						9999,45
+ 					</span>
+					<span>
+						ETH
+						<i class="fa fa-caret-down" style="color: #f00; font-size: 24px;" aria-hidden="true"></i>
+						9999,45
+					</span>
+					<span>
+						BTC
+						<i class="fa fa-caret-up" style="color: #0f0; font-size: 24px;" aria-hidden="true"></i>
+ 						9999,45
+ 					</span>
+					<span>
+						ETH
+						<i class="fa fa-caret-down" style="color: #f00; font-size: 24px;" aria-hidden="true"></i>
+						9999,45
+					</span>
+					<span>
+						BTC
+						<i class="fa fa-caret-up" style="color: #0f0; font-size: 24px;" aria-hidden="true"></i>
+ 						9999,45
+ 					</span>
+					<span>
+						ETH
+						<i class="fa fa-caret-down" style="color: #f00; font-size: 24px;" aria-hidden="true"></i>
+						9999,45
+					</span>
+					<span>
+						BTC
+						<i class="fa fa-caret-up" style="color: #0f0; font-size: 24px;" aria-hidden="true"></i>
+ 						9999,45
+ 					</span>
+					<span>
+						ETH
+						<i class="fa fa-caret-down" style="color: #f00; font-size: 24px;" aria-hidden="true"></i>
+						9999,45
+					</span>
+					<span>
+						BTC
+						<i class="fa fa-caret-up" style="color: #0f0; font-size: 24px;" aria-hidden="true"></i>
+ 						9999,45
+ 					</span>
+					<span>
+						ETH
+						<i class="fa fa-caret-down" style="color: #f00; font-size: 24px;" aria-hidden="true"></i>
+						9999,45
+					</span>
+					<span>
+						BTC
+						<i class="fa fa-caret-up" style="color: #0f0; font-size: 24px;" aria-hidden="true"></i>
+ 						9999,45
+ 					</span>
+					<span>
+						ETH
+						<i class="fa fa-caret-down" style="color: #f00; font-size: 24px;" aria-hidden="true"></i>
+						9999,45
+					</span>
+					<span>
+						BTC
+						<i class="fa fa-caret-up" style="color: #0f0; font-size: 24px;" aria-hidden="true"></i>
+ 						9999,45
+ 					</span>
+					<span>
+						ETH
+						<i class="fa fa-caret-down" style="color: #f00; font-size: 24px;" aria-hidden="true"></i>
+						9999,45
+					</span>
+					<span>
+						BTC
+						<i class="fa fa-caret-up" style="color: #0f0; font-size: 24px;" aria-hidden="true"></i>
+ 						9999,45
+ 					</span>
+					<span>
+						ETH
+						<i class="fa fa-caret-down" style="color: #f00; font-size: 24px;" aria-hidden="true"></i>
+						9999,45
+					</span>
+					<span>
+						BTC
+						<i class="fa fa-caret-up" style="color: #0f0; font-size: 24px;" aria-hidden="true"></i>
+ 						9999,45
+ 					</span>
+					<span>
+						ETH
+						<i class="fa fa-caret-down" style="color: #f00; font-size: 24px;" aria-hidden="true"></i>
+						9999,45
+					</span>
+					<span>
+						BTC
+						<i class="fa fa-caret-up" style="color: #0f0; font-size: 24px;" aria-hidden="true"></i>
+ 						9999,45
+ 					</span>
+					<span>
+						ETH
+						<i class="fa fa-caret-down" style="color: #f00; font-size: 24px;" aria-hidden="true"></i>
+						9999,45
+					</span>
+				</div>
 			</div>
 		</div>
 
@@ -184,11 +277,11 @@
 				<div class="about__right wow slideInRight">
 					<h2>Information about us</h2>
 					<p>
-						<span>ICCURENT GLOBAL</span> is an international investment company,
-						whose main areas include the development and sale of
-						blockchain startups, cryptocurrency trading and margin
-						trading. In order to expand the company and further
-						increase profits, we begin to take open investments
+						<span>ICCURENT GLOBAL</span> is an international investment company, <br>
+						whose main areas include the development and sale of <br>
+						blockchain startups, cryptocurrency trading and margin <br>
+						trading. In order to expand the company and further <br>
+						increase profits, we begin to take open investments <br>
 						due to which you can earn.
 					</p>
 				</div>
@@ -932,6 +1025,18 @@
 		<script src="libs/wow.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="libs/slick/slick.min.js"></script>
+		
+		<script src="https://cdn.jsdelivr.net/jquery.marquee/1.4.0/jquery.marquee.min.js"></script>
+		<script>
+			$(function() {
+			  $('.marquee').marquee({
+			    duration: 20000,
+			    startVisible: true,
+			    duplicated: true
+			  });
+			});
+		</script>
+
 		<script>
 			// slick about__slider
 			$('.about__slider').slick({
