--- a/1/support.html
+++ b/1/support.html
@@ -353,6 +353,12 @@
 					<p>Phone number: <span>support@icurrent.global</span></p>
 					<p>E-mail: <span>mailcom@gmail.com</span></p>
 					<p>Adress: <span> 10 Foster Ln, London, EC2V 6HH, United Kingdom</span></p>
+
+					<div style="display: flex; justify-content: flex-start;">
+						<a style="color: #848388; margin-right: 10px; font-size: 20px;" href="pdf/CERTIFICATE.pdf" download>Certificate</a>
+						<a style="color: #848388; margin-right: 10px; font-size: 20px;" href="pdf/MEMARTS.pdf" download>Memarts</a>
+						<a style="color: #848388; font-size: 20px;" href="pdf/SHARECERTS.pdf" download>Sharecerts</a>
+					</div>
 				</div>
 
 				<div class="feedback__right wow slideInRight" data-wow-duration="1.4s">
