--- a/1/index.html
+++ b/1/index.html
@@ -96,6 +96,14 @@
 
 			<!-- promo -->
 			<section class="promo">
+				<div class="social-link">
+					<a href="https://web.telegram.org/" target="_blank"><img src="img/telegram.svg" alt="icurrent.global"></a>
+					<a href="https://www.youtube.com/" target="_blank"><img src="img/youtube.svg" alt="icurrent.global"></a>
+					<a href="https://twitter.com/?lang=ru" target="_blank"><img src="img/twitter.svg" alt="icurrent.global"></a>
+					<a href="https://ru-ru.facebook.com/" target="_blank"><img src="img/fb.svg" alt="icurrent.global"></a>
+					<a href="https://www.instagram.com/?hl=ru" target="_blank"><img src="img/instagram.svg" alt="icurrent.global"></a>
+				</div>
+
 				<div class="container">
 					<div class="promo-list" style="display: flex; justify-content: space-between; align-items: center;">
 						
@@ -122,9 +130,9 @@
 						</div>
 
 						<div class="promo-right" style="align-self: flex-end;">
-							<video width="100%" height="320" preload="auto" controls="" style="outline: none;">
+							<video width="100%" height="350" preload="auto" controls="" style="outline: none;">
 							  <source src="pdf/pres.mp4">
-					      <object type="application/x-shockwave-flash" width="100%" height="320">
+					      <object type="application/x-shockwave-flash" width="100%" height="350">
 					        <param name="movie" value="papka/flowplayer-3.2.6.swf"> 
 					        <param name="flashvars" value="config={&quot;clip&quot;:&quot;papka/name.mp4&quot;}">
 					      </object>
