--- a/2/thanks.html
+++ b/2/thanks.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="ru"><head><title>Спасибо за заказ!</title><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><style type="text/css">html, body, div, span, applet, object, iframe,
+<!DOCTYPE html><html lang="ru"><head><title>Спасибо за сообщение!</title><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><style type="text/css">html, body, div, span, applet, object, iframe,
 			h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 			a, abbr, acronym, address, big, cite, code,
 			del, dfn, em, font, img, ins, kbd, q, s, samp,
