--- a/2/index.html
+++ b/2/index.html
@@ -24,7 +24,7 @@
 
 			.right-mainpage-bottom-left__list::-webkit-scrollbar-thumb:hover {
 			  background: #555;
-			}</style></head><body><!-- header --><header class="header"><div class="container"><div class="header__logo"><a href="/"><img src="img/logo.svg" alt="icurrent.global"></a></div><div class="header__balance"><p>Balance: <span>9999$</span></p></div><div class="header__menu"><ul><li class="active"><a href="index.html">Dashboard</a></li><li><a href="invest.html">Invest</a></li><li><a href="withdrawal.html">Withdrawal</a></li><li><a href="partnership.html">Partnership</a></li><li><a href="settings.html">Settings</a></li><li><a href="#" class="js-popup">Support</a></li></ul></div><div class="header__reg-login"><a href="">Logout</a></div></div></header><!-- for test popups --><div style="text-align: center;"><!-- <a class="js-popup" href="#">открыть popup</a><br> --><!-- <a class="js-popup2" href="#">открыть popup2</a> --></div><!-- mainpage --><div class="mainpage"><div class="container"><div class="left-mainpage"><div class="left-mainpage-photo"><a href="#"><img src="img/photo_client.jpg" alt="icurrent.global"></a><h2>Olga Lukina</h2><h3>@olyalukina</h3></div><div class="left-mainpage-exchange"><h2>Exchange rates</h2><div class="left-mainpage-exchange-item"><div class="left-mainpage-exchange-item__left"><img src="img/btc-icon.jpg" alt="icurrent.global"></div><div class="left-mainpage-exchange-item__right"><h3>Bitcoin</h3><p>$ 6782,56</p></div></div><div class="left-mainpage-exchange-item"><div class="left-mainpage-exchange-item__left"><img src="img/eth-icon.jpg" alt="icurrent.global"></div><div class="left-mainpage-exchange-item__right"><h3>Etherium</h3><p>$ 247,82</p></div></div><div class="left-mainpage-exchange-item"><div class="left-mainpage-exchange-item__left"><img src="img/ltc-icon.jpg" alt="icurrent.global"></div><div class="left-mainpage-exchange-item__right"><h3>Litecoin</h3><p>$ 104,80</p></div></div><div class="left-mainpage-exchange-item"><div class="left-mainpage-exchange-item__left"><img src="img/icg-token-icon.jpg" alt="icurrent.global"></div><div class="left-mainpage-exchange-item__right"><h3>ICG Token</h3><p>Soon...</p></div></div></div></div><div class="right-mainpage"><div class="right-mainpage-top"><!-- balance --><div class="right-mainpage-top-left right-mainpage-top-left-bg"><div class="right-mainpage-top-left-balance right-mainpage-top-left-balance-bg2"><h2>Balance:</h2><h3>$ 9999.9</h3><h4>(+ $ 9999.99)</h4><div class="right-mainpage-top-left-balance__buttons"><button type="button" class="active btn">Invest</button> <button type="button" class="btn">Withdrawal</button></div></div><div class="right-mainpage-top-left-invest"><div class="right-mainpage-top-left-invest-left"><h3>Invested:</h3><p>$ 2000</p></div><div class="right-mainpage-top-left-invest-right"><h3>Movements:</h3><p>1633</p></div></div></div><div class="right-mainpage-top-right right-mainpage-top-right-bg"><div class="slider2"><div class="slider2-slide"><div class="slider2-text"><h2>Profit:</h2><h3>$ 1963,27</h3><p>Up 14% this week</p></div><div class="slider2-text2">day</div><div class="contain"><canvas id="myChart1"></canvas></div></div><div class="slider2-slide"><div class="slider2-text"><h2>Profit:</h2><h3>$ 1963,27</h3><p>Up 14% this week</p></div><div class="slider2-text2">week</div><div class="contain"><canvas id="myChart2"></canvas></div></div><div class="slider2-slide"><div class="slider2-text"><h2>Profit:</h2><h3>$ 1963,27</h3><p>Up 14% this week</p></div><div class="slider2-text2">month</div><div class="contain"><canvas id="myChart3"></canvas></div></div></div></div></div><div class="right-mainpage-bottom"><!-- Operations: --><div class="right-mainpage-bottom-left"><h2>Operations:</h2><div class="right-mainpage-bottom-left__list"><div class="right-mainpage-bottom-left__list-item"><div class="right-mainpage-bottom-left__list-item-date">09.07. 2019</div><div class="right-mainpage-bottom-left__list-item-exch"><img src="img/plus.png" alt="icurrent.global"><p>Replenishment of USD</p></div><div class="right-mainpage-bottom-left__list-item-from">From: *7989</div><div class="right-mainpage-bottom-left__list-item-usd">+ $ 1005,43</div></div><div class="right-mainpage-bottom-left__list-item"><div class="right-mainpage-bottom-left__list-item-date">09.07. 2019</div><div class="right-mainpage-bottom-left__list-item-exch"><img src="img/minus.png" alt="icurrent.global"><p>Replenishment of USD</p></div><div class="right-mainpage-bottom-left__list-item-from">From: *7989</div><div class="right-mainpage-bottom-left__list-item-usd">- $ 609,07</div></div><div class="right-mainpage-bottom-left__list-item"><div class="right-mainpage-bottom-left__list-item-date">09.07. 2019</div><div class="right-mainpage-bottom-left__list-item-exch"><img src="img/plus.png" alt="icurrent.global"><p>Replenishment of USD</p></div><div class="right-mainpage-bottom-left__list-item-from">From: *7989</div><div class="right-mainpage-bottom-left__list-item-usd">+ $ 1005,43</div></div><div class="right-mainpage-bottom-left__list-item"><div class="right-mainpage-bottom-left__list-item-date">09.07. 2019</div><div class="right-mainpage-bottom-left__list-item-exch"><img src="img/plus.png" alt="icurrent.global"><p>Replenishment of USD</p></div><div class="right-mainpage-bottom-left__list-item-from">From: *7989</div><div class="right-mainpage-bottom-left__list-item-usd">+ $ 1005,43</div></div><div class="right-mainpage-bottom-left__list-item"><div class="right-mainpage-bottom-left__list-item-date">09.07. 2019</div><div class="right-mainpage-bottom-left__list-item-exch"><img src="img/plus.png" alt="icurrent.global"><p>Replenishment of USD</p></div><div class="right-mainpage-bottom-left__list-item-from">From: *7989</div><div class="right-mainpage-bottom-left__list-item-usd">+ $ 1005,43</div></div><div class="right-mainpage-bottom-left__list-item"><div class="right-mainpage-bottom-left__list-item-date">09.07. 2019</div><div class="right-mainpage-bottom-left__list-item-exch"><img src="img/plus.png" alt="icurrent.global"><p>Replenishment of USD</p></div><div class="right-mainpage-bottom-left__list-item-from">From: *7989</div><div class="right-mainpage-bottom-left__list-item-usd">+ $ 1005,43</div></div><div class="right-mainpage-bottom-left__list-item"><div class="right-mainpage-bottom-left__list-item-date">09.07. 2019</div><div class="right-mainpage-bottom-left__list-item-exch"><img src="img/plus.png" alt="icurrent.global"><p>Replenishment of USD</p></div><div class="right-mainpage-bottom-left__list-item-from">From: *7989</div><div class="right-mainpage-bottom-left__list-item-usd">+ $ 1005,43</div></div><!-- <table class="myTable" cellpadding="10" cellspacing="0">
+			}</style></head><body><!-- header --><header class="header"><div class="container"><div class="header__logo"><a href="/"><img src="img/logo.svg" alt="icurrent.global"></a></div><div class="header__balance"><p>Balance: <span>9999$</span></p></div><div class="header__menu"><ul><li class="active"><a href="index.html">Dashboard</a></li><li><a href="invest.html">Invest</a></li><li><a href="withdrawal.html">Withdrawal</a></li><li><a href="partnership.html">Partnership</a></li><li><a href="settings.html">Settings</a></li><li><a href="/" class="js-popup">Support</a></li></ul></div><div class="header__reg-login"><a href="/">Logout</a></div></div></header><!-- for test popups --><div style="text-align: center;"><!-- <a class="js-popup" href="#">открыть popup</a><br> --><!-- <a class="js-popup2" href="#">открыть popup2</a> --></div><!-- mainpage --><div class="mainpage"><div class="container"><div class="left-mainpage"><div class="left-mainpage-photo"><div class="left-mainpage-photo__pen"><label for="upload2"><img src="img/pen.svg" alt="icurrent.global"></label> <input type="file" name="upload_avatar" id="upload2"></div><a href="#" onclick="return false;"><img src="img/photo_client.jpg" alt="icurrent.global"></a><h2>Olga Lukina</h2><h3>@olyalukina</h3></div><div class="left-mainpage-exchange"><h2>Exchange rates</h2><div class="left-mainpage-exchange-item"><div class="left-mainpage-exchange-item__left"><img src="img/btc-icon.jpg" alt="icurrent.global"></div><div class="left-mainpage-exchange-item__right"><h3>Bitcoin</h3><p>$ 6782,56</p></div></div><div class="left-mainpage-exchange-item"><div class="left-mainpage-exchange-item__left"><img src="img/eth-icon.jpg" alt="icurrent.global"></div><div class="left-mainpage-exchange-item__right"><h3>Etherium</h3><p>$ 247,82</p></div></div><div class="left-mainpage-exchange-item"><div class="left-mainpage-exchange-item__left"><img src="img/ltc-icon.jpg" alt="icurrent.global"></div><div class="left-mainpage-exchange-item__right"><h3>Litecoin</h3><p>$ 104,80</p></div></div><div class="left-mainpage-exchange-item"><div class="left-mainpage-exchange-item__left"><img src="img/icg-token-icon.jpg" alt="icurrent.global"></div><div class="left-mainpage-exchange-item__right"><h3>ICG Token</h3><p>Soon...</p></div></div></div></div><div class="right-mainpage"><div class="right-mainpage-top"><!-- balance --><div class="right-mainpage-top-left right-mainpage-top-left-bg"><div class="right-mainpage-top-left-balance right-mainpage-top-left-balance-bg2"><h2>Balance:</h2><h3>$ 9999.9</h3><h4>(+ $ 9999.99)</h4><div class="right-mainpage-top-left-balance__buttons"><a href="invest.html" class="active btn">Invest</a><!-- <button type="button" class="active btn">Invest</button> --> <a href="withdrawal.html" class="btn">Withdrawal</a><!-- <button type="button" class="btn">Withdrawal</button> --></div></div><div class="right-mainpage-top-left-invest"><div class="right-mainpage-top-left-invest-left"><h3>Invested:</h3><p>$ 2000</p></div><div class="right-mainpage-top-left-invest-right"><h3>Movements:</h3><p>1633</p></div></div></div><div class="right-mainpage-top-right right-mainpage-top-right-bg"><div class="slider2"><div class="slider2-slide"><div class="slider2-text"><h2>Profit:</h2><h3>$ 1963,27</h3><p>Up 14% this day</p></div><div class="slider2-text2">day</div><div class="contain"><canvas id="myChart1"></canvas></div></div><div class="slider2-slide"><div class="slider2-text"><h2>Profit:</h2><h3>$ 1963,27</h3><p>Up 14% this week</p></div><div class="slider2-text2">week</div><div class="contain"><canvas id="myChart2"></canvas></div></div><div class="slider2-slide"><div class="slider2-text"><h2>Profit:</h2><h3>$ 1963,27</h3><p>Up 14% this month</p></div><div class="slider2-text2">month</div><div class="contain"><canvas id="myChart3"></canvas></div></div></div></div></div><div class="right-mainpage-bottom"><!-- Operations: --><div class="right-mainpage-bottom-left"><h2>Operations:</h2><div class="right-mainpage-bottom-left__list"><div class="right-mainpage-bottom-left__list-item"><div class="right-mainpage-bottom-left__list-item-date">09.07. 2019</div><div class="right-mainpage-bottom-left__list-item-exch"><img src="img/plus.png" alt="icurrent.global"><p>Replenishment of USD</p></div><div class="right-mainpage-bottom-left__list-item-from">From: *7989</div><div class="right-mainpage-bottom-left__list-item-usd">+ $ 1005,43</div></div><div class="right-mainpage-bottom-left__list-item"><div class="right-mainpage-bottom-left__list-item-date">09.07. 2019</div><div class="right-mainpage-bottom-left__list-item-exch"><img src="img/minus.png" alt="icurrent.global"><p>Replenishment of USD</p></div><div class="right-mainpage-bottom-left__list-item-from">From: *7989</div><div class="right-mainpage-bottom-left__list-item-usd">- $ 609,07</div></div><div class="right-mainpage-bottom-left__list-item"><div class="right-mainpage-bottom-left__list-item-date">09.07. 2019</div><div class="right-mainpage-bottom-left__list-item-exch"><img src="img/plus.png" alt="icurrent.global"><p>Replenishment of USD</p></div><div class="right-mainpage-bottom-left__list-item-from">From: *7989</div><div class="right-mainpage-bottom-left__list-item-usd">+ $ 1005,43</div></div><div class="right-mainpage-bottom-left__list-item"><div class="right-mainpage-bottom-left__list-item-date">09.07. 2019</div><div class="right-mainpage-bottom-left__list-item-exch"><img src="img/plus.png" alt="icurrent.global"><p>Replenishment of USD</p></div><div class="right-mainpage-bottom-left__list-item-from">From: *7989</div><div class="right-mainpage-bottom-left__list-item-usd">+ $ 1005,43</div></div><div class="right-mainpage-bottom-left__list-item"><div class="right-mainpage-bottom-left__list-item-date">09.07. 2019</div><div class="right-mainpage-bottom-left__list-item-exch"><img src="img/plus.png" alt="icurrent.global"><p>Replenishment of USD</p></div><div class="right-mainpage-bottom-left__list-item-from">From: *7989</div><div class="right-mainpage-bottom-left__list-item-usd">+ $ 1005,43</div></div><div class="right-mainpage-bottom-left__list-item"><div class="right-mainpage-bottom-left__list-item-date">09.07. 2019</div><div class="right-mainpage-bottom-left__list-item-exch"><img src="img/plus.png" alt="icurrent.global"><p>Replenishment of USD</p></div><div class="right-mainpage-bottom-left__list-item-from">From: *7989</div><div class="right-mainpage-bottom-left__list-item-usd">+ $ 1005,43</div></div><div class="right-mainpage-bottom-left__list-item"><div class="right-mainpage-bottom-left__list-item-date">09.07. 2019</div><div class="right-mainpage-bottom-left__list-item-exch"><img src="img/plus.png" alt="icurrent.global"><p>Replenishment of USD</p></div><div class="right-mainpage-bottom-left__list-item-from">From: *7989</div><div class="right-mainpage-bottom-left__list-item-usd">+ $ 1005,43</div></div><!-- <table class="myTable" cellpadding="10" cellspacing="0">
 									<tr>
 										<td>09.07. 2019</td>
 										<td>Replenishment of USD</td>
@@ -134,13 +134,18 @@
                 }]
               },
 					    tooltips: {
-					      cornerRadius: 15,
+					    	yAlign: 'bottom',
+					    	xAlign: 'center',
+					    	// titleAlign: 'center',
+  	            // footerAlign: 'center',
+  	            bodyAlign: 'center',
+					      cornerRadius: 5,
 					      caretSize: 0,
-					      xPadding: 10,
-					      yPadding: 10,
+					      xPadding: 7,
+					      yPadding: 7,
 					      borderWidth: 1,
-					      borderColor: 'rgba(0,0,0,.5)',
-					      footerMarginTop: 40,
+					      borderColor: 'rgba(0,0,0,.2)',
+					      footerMarginTop: 0,
 					      backgroundColor: '#f4f5f9',
 					      bodyFontColor: '#49484b',
 					      titleFontStyle: 'normal',
@@ -201,13 +206,18 @@
                 }]
               },
 					    tooltips: {
-					      cornerRadius: 15,
+					    	yAlign: 'bottom',
+					    	xAlign: 'center',
+					    	// titleAlign: 'center',
+  	            // footerAlign: 'center',
+  	            bodyAlign: 'center',
+					      cornerRadius: 5,
 					      caretSize: 0,
-					      xPadding: 10,
-					      yPadding: 10,
+					      xPadding: 7,
+					      yPadding: 7,
 					      borderWidth: 1,
-					      borderColor: 'rgba(0,0,0,.5)',
-					      footerMarginTop: 40,
+					      borderColor: 'rgba(0,0,0,.2)',
+					      footerMarginTop: 0,
 					      backgroundColor: '#f4f5f9',
 					      bodyFontColor: '#49484b',
 					      titleFontStyle: 'normal',
@@ -268,13 +278,18 @@
                 }]
               },
 					    tooltips: {
-					      cornerRadius: 15,
+					    	yAlign: 'bottom',
+					    	xAlign: 'center',
+					    	// titleAlign: 'center',
+  	            // footerAlign: 'center',
+  	            bodyAlign: 'center',
+					      cornerRadius: 5,
 					      caretSize: 0,
-					      xPadding: 10,
-					      yPadding: 10,
+					      xPadding: 7,
+					      yPadding: 7,
 					      borderWidth: 1,
-					      borderColor: 'rgba(0,0,0,.5)',
-					      footerMarginTop: 40,
+					      borderColor: 'rgba(0,0,0,.2)',
+					      footerMarginTop: 0,
 					      backgroundColor: '#f4f5f9',
 					      bodyFontColor: '#49484b',
 					      titleFontStyle: 'normal',
