--- a/1/about.html
+++ b/1/about.html
@@ -182,7 +182,7 @@
 				  		The genuine ICURRENT GLOBAL website is property of ICURRENT GLOBAL IC. LTD [GB], use EV SSL encryption and has green address bar <br>
 				  		that confirms that the presented content is the genuine and legitimate.
 				  	</p>
-				  	<img src="../img/text2-about-bg.png" alt="icurrent.global">
+				  	<img src="img/text2-about-bg.png" alt="icurrent.global">
 				  </div>
 				  <div>
 						<div class="text3-about__list">
