--- a/3/css/min/thanks.html
+++ b/3/css/min/thanks.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="ru">
-	<head>
-		<title>Спасибо за заказ!</title>
-		<meta charset="utf-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-		<style type="text/css">
-			html, body, div, span, applet, object, iframe,
+<!DOCTYPE html><html lang="ru"><head><title>Спасибо за заказ!</title><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><style type="text/css">html, body, div, span, applet, object, iframe,
 			h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 			a, abbr, acronym, address, big, cite, code,
 			del, dfn, em, font, img, ins, kbd, q, s, samp,
@@ -95,32 +87,6 @@
 
 			.link:hover {
 				opacity: .7;
-			}
-		</style>
-
-		<!-- fonts -->
-		<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic" rel="stylesheet">
-
-		<script>
-			setTimeout(function() {
+			}</style><!-- fonts --><link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic" rel="stylesheet"><script>setTimeout(function() {
 			  window.location.href = "/";
-			}, 5000);
-		</script>
-	</head>
-
-	<body>
-		<table>
-			<tr>
-				<td>
-					<div>
-						<h1>Благодарим вас</h1>
-						<p>В ближайшее время с вами свяжется наш специалист.<br>Всего вам доброго.</p>
-						<div class="link">
-							<a href="/">вернуться на сайт</a>
-						</div>
-					</div>
-				</td>
-			</tr>
-		</table>
-	</body>
-</html>
+			}, 5000);</script></head><body><table><tr><td><div><h1>Благодарим вас</h1><p>В ближайшее время с вами свяжется наш специалист.<br>Всего вам доброго.</p><div class="link"><a href="/">вернуться на сайт</a></div></div></td></tr></table></body></html>
