--- a/3/index.html
+++ b/3/index.html
@@ -44,7 +44,7 @@
 		<link rel="shortcut icon" href="favicon.png" type="image/png">
 
 		<link rel="stylesheet" href="libs/owl/owl.carousel.min.css">
-		<link rel="stylesheet" href="css/style.css?v1.0.0">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 
 	<body>
@@ -135,7 +135,7 @@
 					  		<button class="four">All</button>
 					  	</div>
 					  	<!-- <div class="chart-container" style="position: relative;  margin: auto; height: 50vh;  width: 95vw;">*/ -->
-					  	<canvas id="myChart1" height="100%"></canvas>
+					  	<canvas id="myChart1" height="95%"></canvas>
 					  	<!-- </div> -->
 					  	<!-- <canvas id="myChart1"></canvas> -->
 					  </div>
@@ -147,7 +147,7 @@
 					  		<button class="three">1м</button>
 					  		<button class="four">All</button>
 					  	</div>
-					  	<canvas id="myChart7" height="100%"></canvas>
+					  	<canvas id="myChart7" height="95%"></canvas>
 					  	<!-- <canvas id="myChart7"></canvas> -->
 					  </div>
 					  <div>
@@ -158,7 +158,7 @@
 					  		<button class="three active">1м</button>
 					  		<button class="four">All</button>
 							</div>
-							<canvas id="myChartM" height="100%"></canvas>
+							<canvas id="myChartM" height="95%"></canvas>
 					  	<!-- <canvas id="myChartM"></canvas> -->
 					  </div>
 					  <div>
@@ -169,7 +169,7 @@
 					  		<button class="three">1м</button>
 					  		<button class="four active">All</button>
 							</div>
-							<canvas id="myChartAll" height="100%"></canvas>
+							<canvas id="myChartAll" height="95%"></canvas>
 					  	<!-- <canvas id="myChartAll"></canvas> -->
 					  </div>
 					</div>
@@ -554,7 +554,7 @@
 	        			pointBackgroundColor: "#000",
 	        			pointStyle: 'circle',
 	        			// pointRadius: 3,
-		            data: [107, 120, 100, 103, 120, 110, 110, 120, 130, 130, 140, 145, 130, 140, 140]
+		            data: [50, 70, 71, 83, 90, 100, 105, 110, 115, 120, 130, 140, 145, 150, 160]
 			        }]
 				    },
 
@@ -648,7 +648,7 @@
 				  			pointBackgroundColor: "#000",
 				  			pointStyle: 'circle',
 				  			// pointRadius: 3,
-				        data: [107, 140, 120, 120, 100, 120, 140, 120, 110, 130, 110, 120, 130, 140, 150]
+				        data: [40, 60, 65, 80, 94, 104, 109, 115, 125, 130, 140, 150, 155, 160, 170]
 				      }]
 				    },
 
@@ -738,7 +738,7 @@
 				  			pointBackgroundColor: "#000",
 				  			pointStyle: 'circle',
 				  			// pointRadius: 3,
-				        data: [10, 40, 20, 130, 130, 120, 140, 120, 130, 130, 140, 150, 130, 140, 150]
+				        data: [20, 30, 45, 60, 74, 84, 100, 115, 125, 130, 140, 150, 155, 160, 170]
 				      }]
 				    },
 
@@ -828,7 +828,7 @@
 				  			pointBackgroundColor: "#000",
 				  			pointStyle: 'circle',
 				  			// pointRadius: 3,
-				        data: [70, 140, 50, 130, 130, 90, 40, 120, 130, 30, 140, 150, 130, 140, 150]
+				        data: [40, 60, 69, 70, 90, 100, 109, 118, 120, 130, 140, 150, 155, 160, 178]
 				      }]
 				    },
 
