--- a/3/questions.html
+++ b/3/questions.html
@@ -73,8 +73,8 @@
 			<div class="wrap">
 				<div class="header__bottom">
 					<div class="header__bottom-logo">
-						<!-- <a href="/"><img src="img/logo.png" alt="Icon Wallet - Кошелек будущего"></a> -->
-						<a href="/" style="font-size: 26px; color: #000; font-weight: 900;">ICON <span style="color: #fed851;">WALLET</span></a>
+						<a href="/"><img src="img/logo.png" alt="Icon Wallet - Кошелек будущего"></a>
+						<!-- <a href="/" style="font-size: 26px; color: #000; font-weight: 900;">ICON <span style="color: #fed851;">WALLET</span></a> -->
 					</div>
 					<div class="header__bottom-menu">
 						<ul>
