--- a/3/withus.html
+++ b/3/withus.html
@@ -162,7 +162,7 @@
 			<div class="wrap">
 				<h2>Внимание!</h2>
 				<p>
-					После заключения договора «Доверительное управление средств», <br> у вас есть право в <span>любое время завершить договор и вывести свои средства</span>.
+					После заключения договора «Доверительное управление средств», у вас есть право в <span>любое время завершить договор и вывести свои средства</span>.
 				</p>
 			</div>
 		</section>
