--- a/3/registration.html
+++ b/3/registration.html
@@ -197,7 +197,8 @@
 					</form>
 
 					<div class="page-registration-form-text">
-						<p>У меня уже есть кошелек. <a href="/login/">Войти</a></p>
+						<!-- <p>У меня уже есть кошелек. <a href="/login/">Войти</a></p> -->
+						<p>У меня уже есть кошелек. <a href="#" onclick="$('.js-popup-login').click();">Войти</a></p>
 					</div>
 					<div class="page-registration-form-text2">
 						<p><b>Внимание!</b> Для хранения суммы свыше 10.000$, вам необходимо пройти дополнительную паспортную верификацию в настройках личного кабинета кошелька Icon Wallet.</p>
