--- a/3/index.html
+++ b/3/index.html
@@ -44,7 +44,7 @@
 		<link rel="shortcut icon" href="favicon.png" type="image/png">
 
 		<link rel="stylesheet" href="libs/owl/owl.carousel.min.css">
-		<link rel="stylesheet" href="css/style.css?v=1.0.0">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 
 	<body>
